Complete draft with a few comments.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,11 @@
 \begin{abstract}
 
-  Datacenters consume a massive amount of energy, and this consumption is increasing rapidly.  As new datacenters are built, environmentally conscious operators are seeking to mitigate their environmental impact by building offsetting renewable power plants.  These renewable power plants may or may not be co-located with datacenters.  While a number of research efforts have looked at the optimal placement of new datacenters and renewable power plants, they have mostly neglect the impact on the electricity transmission grid.  With rapidly increasing penetration of such ``renewable powered datacenters,'' it is becoming imperative to study their impact on the tranmission grid.  In this paper, we show that considerations of the impact on the transmission grid when placing new datacenters and renewable power plants can be mutually beneficial to both grid operators and datacenter owners.  Specifically, locating datacenters and renewable power plants at strategic places in the grid could help to minimize (i) overloading of transmission lines, (ii) grid voltage variations outside the acceptable range, and (iii) system losses.  We develop an optimization framework for placing a new datacenter and wind farm, and use it in a case study to show that considering transmission losses can lead to different placement and lower overall cost.  Interestingly, co-locating the datacenter and wind farm does not always lead to lowest impact on the transmission grid and lowest overall cost.  Thus, we conclude that optimal placement of new datacenters and renewable power plant can only be achieved by jointly considering the impact of location on the costs for the datacenter owners as well as for the grid operators.
+Datacenters are being constructed at a rapid pace.
+As new datacenters are built, some owners are seeking to mitigate the environmental impact of their massive energy consumption by building offsetting renewable power plants.
+%These renewable power plants may or may not be co-located with datacenters.
+While a number of research efforts have studied how to best place new datacenters and renewable power plants, they have mostly neglect the impact on the electricity transmission grid.
+%With rapidly increasing penetration of such ``renewable powered datacenters,'' it is becoming imperative to study their impact on the tranmission grid.
+In this paper, we show that considerations of the impact on the transmission grid when placing new datacenters and renewable power plants can be mutually beneficial to both grid operators and datacenter owners.  Specifically, locating datacenters and renewable power plants at strategic places in the grid could help to minimize (i) overloading of transmission lines, (ii) grid voltage variations outside the acceptable range, and (iii) transmission system losses.  We develop an optimization framework for placing a new datacenter and offsetting wind farm, and use it in a case study to show that considering transmission losses can lead to different placements and lower overall cost.  Interestingly, co-locating the datacenter and wind farm does not always lead to lowest impact on the transmission grid and lowest overall cost.  Thus, we conclude that optimal placement of new datacenters and renewable power plants can only be achieved by jointly considering the impact of location on the costs for the datacenter owners as well as for the grid operators.
 
 \end{abstract}
 
