--- a/quantify.tex
+++ b/quantify.tex
@@ -86,10 +86,10 @@ DC6 & Massachusetts & 27& 300.21 & 4 \\
 
 
 {\em Wind farm model:}
-The wind farms connected to bus 18, 28, 36, 37 and 38 (Figure~\ref{fig:newengland}) are lumped models of several wind farms within a geographical region. The locations and capacity settings of the five wind farms are presented in Table~\ref{tab:wf_setting}. We assume that each farm can be represented by `$n$' identical wind turbines, where $n$= total farm rated capacity/individual wind turbine rating. This approximation does not change any of our results because we are interested in studying the global impact of wind farm powered datacenters on the electric grid. Also, since most of the wind turbines in this region are the GE 1.5MW machines, we consider the GE machine wind speed versus power characteristics \cite{lei2006modeling}. The wind speed versus turbine output characteristics is commonly referred to as the power curve (Figure~\ref{fig:windcurve}).  For this particular turbine model, the cut-in wind speed, i.e., the wind speed at which the turbine starts producing power, is 5m/s and the cut-off wind speed is 25m/s, beyond which the turbine will be shut down for safety reasons. The wind turbine produces rated output that grows linearly from near 0MW to 1.2MW for wind speeds from 6m/s to 10m/s, then more slowly to reach the top rated output of 
+The wind farms connected to bus 18, 28, 36, 37 and 38 (Figure~\ref{fig:newengland}) are lumped models of several wind farms within a geographical region. The locations and capacity settings of the five wind farms are presented in Table~\ref{tab:wf_setting}. We assume that each farm can be represented by `$n$' identical wind turbines, where $n$= total farm rated capacity/individual wind turbine rating. This approximation does not change any of our results because we are interested in studying the global impact of wind farm powered datacenters on the electric grid. Also, since most of the wind turbines in this region are the GE 1.5MW machines, we consider the GE machine wind speed versus power characteristics \cite{lei2006modeling}. The wind speed versus turbine output characteristics is commonly referred to as the power curve (Figure~\ref{fig:windcurve})\xynote{I saw you removed the wind curve figure, so here the reference should be removed too, right?}.  For this particular turbine model, the cut-in wind speed, i.e., the wind speed at which the turbine starts producing power, is 5m/s and the cut-off wind speed is 25m/s, beyond which the turbine will be shut down for safety reasons. The wind turbine produces rated output that grows linearly from near 0MW to 1.2MW for wind speeds from 6m/s to 10m/s, then more slowly to reach the top rated output of
 1.5MW between wind speeds of 13-25m/s.
 
-%  From Figure~\ref{fig:windcurve} we can see that the cut-in wind speed, 
+%  From Figure~\ref{fig:windcurve} we can see that the cut-in wind speed,
 % %%%
 % \begin{figure}[ht]
 % \centering
@@ -191,7 +191,7 @@ Case No. & \# of buses with voltage deviation & List of buses with voltage devia
 \end{center}
 \end{table}
 
-At last, the total system losses are compared over the three cases under the condition of three wind speed settings, as shown in Figure~\ref{fig:loss-cases}. Here, the background load of the electric grid is set to normal (6254MW in total,summarized over all the buses). Three categories of wind speed settings are: LOW, MEDIUM, and HIGH. The setting HIGH means the wind speed is larger than 11m/s, and the output power of the wind turbine is nearly reaching its rated capacity. For example, a 100MW wind farm is generating at least 89.6MW power under this setting. The size of the additional datacenter in Case 2\&3 is set to 200MW. Specifically, for Case 2 the datacenter is located at bus 18 (co-located with wind farm 1) and for Case 3 the datacenter is located at bus 10 (away from all wind farms).
+At last, the total system losses are compared over the three cases under the condition of three wind speed settings, as shown in Figure~\ref{fig:loss-cases}. Here, the background load of the electric grid is set to normal (6254MW in total, summarized over all the buses). Three categories of wind speed settings are: LOW, MEDIUM, and HIGH. The setting HIGH means the wind speed is larger than 11m/s, and the output power of the wind turbine is nearly reaching its rated capacity. For example, a 100MW wind farm is generating at least 89.6MW power under this setting. The size of the additional datacenter in Case 2\&3 is set to 200MW. Specifically, for Case 2 the datacenter is located at bus 18 (co-located with wind farm 1) and for Case 3 the datacenter is located at bus 10 (away from all wind farms).
 
 \begin{figure}[ht]
 \centering
