Some additional bib entries.

--- a/paper.bib
+++ b/paper.bib
@@ -662,3 +662,18 @@ pages={368-372}
   year      = {2012},
   pages     = {1-10}
 }
+
+@Misc{RM14DCGrowth,
+  author = 	 "{ResearchAndMarkets}",
+  title = 	 "{Global Data Center Construction Market 2014-2018}",
+  year = 	 {2014},
+  note =         {\nolinkurl{http://www.researchandmarkets.com/reports/2757583/}}
+}
+
+@InProceedings{Ren12MASCOTS,
+  author = 	 {Chuangang Ren and Di Wang and Bhuvan Urgaonkar and Anand Sivasubramaniam},
+  title = 	 "{Carbon-Aware Energy Capacity Planning for Datacenters}",
+  booktitle =    {MASCOTS},
+  year = 	 {2012}
+}
+
