update references with full info

--- a/paper.bib
+++ b/paper.bib
@@ -15,11 +15,12 @@
 }
 
 @inproceedings{AdamWierman2014,
-author = {Adam Wierman, Zhenhua Liu, Iris Liu and Hamed Mohsenian-Rad},
-booktitle = {Proceedings of IEEE IGCC, 2014.},
-title = {{Opportunities and Challenges for Data Center Demand Response}},
-url = {http://users.cms.caltech.edu/~adamw/papers/dcdrsurvey.pdf},
-year = {2014}
+ title={Opportunities and challenges for data center demand response},
+  author={Wierman, Adam and Liu, Zhenhua and Liu, Iris and Mohsenian-Rad, Hamed},
+  booktitle={Green Computing Conference (IGCC), 2014 International},
+  pages={1--10},
+  year={2014},
+  organization={IEEE}
 }
 
 @article{haowang2014grid,
@@ -208,10 +209,13 @@ ISSN={0885-8977},}
 }
 
 @inproceedings{Goiri11place,
-	author = {\'I. Goiri and K. Le and J. Guitart and J. Torres and R. Bianchini},
-	title = "{Intelligent Placement of Datacenters for Internet Services}",
-	booktitle = "ICDCS",
-	year = {2011}
+  title={Intelligent placement of datacenters for internet services},
+  author={Le, Kien and Guitart, Jordi and Torres, Jordi and Bianchini, Ricardo and others},
+  booktitle={Distributed Computing Systems (ICDCS), 2011 31st International Conference on},
+  pages={131--142},
+  year={2011},
+  organization={IEEE}
+
 }
 
 @inproceedings{Goiri11,
@@ -420,10 +424,13 @@ and Data Averaging}",
 }
 
 @inproceedings{larumbe2012optimal,
-	title="{Optimal Location of Data Centers and Software Components in Cloud Computing Network Design}",
-	author={Federico Larumbe and Brunilde Sans{\`o}},
-	booktitle={CCGrid},
-	year={2012},
+  title={Optimal location of data centers and software components in cloud computing network design},
+  author={Larumbe, Federico and Sans{\`o}, Brunilde},
+  booktitle={Proceedings of the 2012 12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (ccgrid 2012)},
+  pages={841--844},
+  year={2012},
+  organization={IEEE Computer Society}
+
 }
 
 @Book{Koomey2011,
@@ -611,10 +618,13 @@ year = {2013}
 }
 
 @inproceedings{gao2013answer,
-	title="{The Answer Is Blowing in the Wind: Analysis of Powering Internet Data Centers with Wind Energy}",
-	author={Yan Gao and Zheng Zeng and Xue Liu  and PR Kumar},
-	booktitle={INFOCOM},
-	year={2013}
+  title={The answer is blowing in the wind: Analysis of powering internet data centers with wind energy},
+  author={Gao, Van and Zeng, Zheng and Liu, Xue and Kumar, P Roshan},
+  booktitle={INFOCOM, 2013 Proceedings IEEE},
+  pages={520--524},
+  year={2013},
+  organization={IEEE}
+
 }
 
 @article{Rahman13,
@@ -647,10 +657,13 @@ pages={368-372}
 
 
 @inproceedings{liu2014pricing,
-  title={Pricing data center demand response},
+ title={Pricing data center demand response},
   author={Liu, Zhenhua and Liu, Iris and Low, Steven and Wierman, Adam},
-  booktitle={Proc. ACM Sigmetrics},
-  year={2014}
+  booktitle={The 2014 ACM international conference on Measurement and modeling of computer systems},
+  pages={111--123},
+  year={2014},
+  organization={ACM}
+
 }
 
 @inproceedings{Aikema12,
@@ -671,9 +684,11 @@ pages={368-372}
 }
 
 @InProceedings{Ren12MASCOTS,
-  author = 	 {Chuangang Ren and Di Wang and Bhuvan Urgaonkar and Anand Sivasubramaniam},
-  title = 	 "{Carbon-Aware Energy Capacity Planning for Datacenters}",
-  booktitle =    {MASCOTS},
-  year = 	 {2012}
-}
+  title={Carbon-aware energy capacity planning for datacenters},
+  author={Ren, Chuangang and Wang, Di and Urgaonkar, Bhuvan and Sivasubramaniam, Anand},
+  booktitle={Modeling, Analysis \& Simulation of Computer and Telecommunication Systems (MASCOTS), 2012 IEEE 20th International Symposium on},
+  pages={391--400},
+  year={2012},
+  organization={IEEE}
 
+}
